<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    tools:context=".Repartidor.Registro_repartidor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="582dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="75dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="89dp"
                android:layout_marginLeft="89dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="117dp"
                android:layout_marginRight="117dp"
                android:gravity="center"
                android:text="@string/titulo_registro"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/black"/>

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="66dp"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/boton_atras"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:foreground="?selectableItemBackground"/>

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="355dp"
                android:layout_height="58dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="127dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="29dp"
                android:background="@drawable/estilo_input_text"
                android:backgroundTint="#83237D88"
                android:paddingLeft="10dp"
                android:ems="10"
                android:hint="Cedula"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"/>

            <EditText
                android:id="@+id/txt_apellido"
                android:layout_width="356dp"
                android:layout_height="63dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="217dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/estilo_input_text"
                android:backgroundTint="#83237D88"
                android:paddingLeft="10dp"
                android:ems="10"
                android:hint="@string/txt_nombre"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"/>

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="352dp"
                android:layout_height="59dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="307dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="39dp"
                android:background="@drawable/estilo_input_text"
                android:backgroundTint="#83237D88"
                android:paddingLeft="10dp"
                android:ems="10"
                android:hint="@string/txt_apellido"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"/>

            <EditText
                android:id="@+id/txt_contraseña"
                android:layout_width="349dp"
                android:layout_height="61dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="393dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="42dp"
                android:background="@drawable/estilo_input_text"
                android:backgroundTint="#83237D88"
                android:paddingLeft="10dp"
                android:ems="10"
                android:hint="@string/txt_Email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"/>

            <EditText
                android:id="@+id/txt_contraseña2"
                android:layout_width="349dp"
                android:layout_height="61dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="483dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="42dp"
                android:background="@drawable/estilo_input_text"
                android:backgroundTint="#83237D88"
                android:paddingLeft="10dp"
                android:ems="10"
                android:hint="@string/txt_Pass"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"/>

            <EditText
                android:id="@+id/txt_telefono"
                android:layout_width="349dp"
                android:layout_height="61dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="563dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="42dp"
                android:background="@drawable/estilo_input_text"
                android:backgroundTint="#83237D88"
                android:paddingLeft="10dp"
                android:ems="10"
                android:hint="Telefono"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"/>

            <Button
                android:id="@+id/btn_crearu"
                android:layout_width="274dp"
                android:layout_height="59dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="643dp"
                android:layout_marginEnd="70dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/boton_crear_cuenta"
                android:foreground="?selectableItemBackground"
                android:text="@string/btn_crearCuenta"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/black"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>