<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo4"
    tools:context=".Repartidor.Login_repartidor">

    <TextView
        android:id="@+id/textView"
        android:layout_width="283dp"
        android:layout_height="124dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:background="@drawable/boton_redondear_linea"
        android:gravity="center"
        android:text="@string/txt_marca"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="Correo:"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_email"
        app:layout_constraintTop_toBottomOf="@+id/textView">
    </TextView>

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:background="@drawable/estilo_input_text"
        android:backgroundTint="#83237D88"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Contraseña:"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_contraseña"
        app:layout_constraintTop_toBottomOf="@+id/txt_email">
    </TextView>

    <EditText
        android:id="@+id/txt_contraseña"
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/estilo_input_text"
        android:backgroundTint="#83237D88"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_email"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintLeft_toLeftOf="@+id/txt_email"
        app:layout_constraintRight_toRightOf="@+id/txt_email"
        app:layout_constraintStart_toStartOf="@+id/txt_email"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <View
        android:id="@+id/divider2"
        android:layout_width="70dp"
        android:layout_height="4dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#0025C5D9"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contraseña"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="79dp"
        android:layout_height="58dp"
        android:layout_marginStart="173dp"
        android:layout_marginLeft="173dp"
        android:layout_marginEnd="173dp"
        android:layout_marginRight="173dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contraseña" />

    <View
        android:id="@+id/divider"
        android:layout_width="85dp"
        android:layout_height="4dp"
        android:layout_marginBottom="188dp"
        android:background="#0025C5D9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_redondear"
        android:foreground="?selectableItemBackground"
        android:text="@string/btn_login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <Button
        android:id="@+id/button3"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginRight="-4dp"
        android:background="@drawable/boton_registrarse"
        android:foreground="?selectableItemBackground"
        android:text="@string/btn_registrar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintRight_toRightOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>